# CrisisWorldCortex

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  Blog.md  CLAUDE.md  CORTEX_FIX_DIAGNOSIS.md  Dockerfile  INVESTIGATION_REPORT.md  README.md  TRAINING_PIPELINE.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
.github/workflows/: ci.yml
baselines/: CLAUDE.md  cortex_fixed_router.py  cortex_trained_router.py  flat_agent.py  flat_agent_matched_compute.py
cortex/: CLAUDE.md  anti_hivemind.py  council.py  lenses.py  llm_client.py  metacognition.py  routing_policy.py  schemas.py
cortex/brains/: __init__.py  _base.py  _executive.py  epidemiology.py  governance.py  logistics.py
cortex/subagents/: __init__.py  _base.py  critic.py  perception.py  planner.py  world_modeler.py
cortex/subagents/prompts/: critic.txt  planner.txt  world_modeler.txt
demo/: CLAUDE.md
docs/: CORTEX_ARCHITECTURE.md  SMOKE_GATE_RUNBOOK.md
frontend/: index.html
frontend/css/: styles.css
frontend/js/: actions.js  api.js  app.js  council-narration.js  replay.js  samples.js  state.js
notebooks/: colab_demo_unsloth_smollm.ipynb  train_b1_grpo.ipynb  train_cortex_router_grpo.ipynb
scripts/: check_commit_msg.py
server/: CLAUDE.md  CrisisWorldCortex_environment.py  Dockerfile  __init__.py  app.py
server/graders/: __init__.py  outer_reward.py
server/simulator/: __init__.py  seir_model.py  tasks.py
tests/: CLAUDE.md  conftest.py  test_actions_round_trip.py  test_b3_trajectory_bugs.py  test_baseline_b1.py  test_baseline_b2.py  test_baseline_b3.py  test_baseline_b6.py  test_cortex_brain_executive.py  test_cortex_brain_smoke.py  test_cortex_council.py  test_cortex_council_smoke.py  test_cortex_lenses.py  test_cortex_metacognition.py  test_cortex_perception.py  test_cortex_routing_policy.py  test_cortex_subagents.py  test_council_cap_bugs.py  test_env_reset_kwargs.py  test_env_step_reward_wiring.py  test_import_graph.py  test_inference_agent_dispatch.py  test_inference_bugs.py  test_legal_constraint_enforcement.py  test_llm_client.py  test_observation_no_latent_leak.py  test_outer_reward_in_range.py  test_outer_reward_non_constancy.py  test_outer_reward_terminal_bonus.py  test_package_exports.py  test_reward_signal_quality.py  test_schemas_roundtrip.py  test_seir_correctness.py  test_simulator_determinism.py  test_simulator_random_episode.py  test_simulator_task_configs.py  test_smoke_env.py  test_stdout_format.py  test_synthetic_rejection_payload.py  test_training_eval_metrics.py  (+7 more)
tests/_helpers/: __init__.py  llm_stub.py  router_stub.py
training/: CLAUDE.md  __init__.py  eval_metrics.py  reward_shaping.py  rollout_buffer.py
training/scripts/: BOOTSTRAP.md  __init__.py  bootstrap_probe.sh  collect_b3_corpus.py  collect_sft_data.py  launch_cortex_grpo.sh  minimal_proof.py  sft_warmstart.py  sft_warmstart_router.py  train_b1_grpo.py  train_cortex_multi_model.py
